--- a/Football_Scores-master/app/src/main/res/values/styles.xml
+++ b/Football_Scores-master/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="TextStyle" parent="android:TextAppearance.Medium">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
